--- a/pricing.html
+++ b/pricing.html
@@ -335,6 +335,7 @@
             "Stock Music",
             "720p Output",
             "1 Revision"
+            "3 Days Delivery"
           ],
           crosses: [
             "Advanced Effects",
