--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- ashley scss -->
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
-    <title>Ashley</title>
+    <title>EFFEX – Let's Create</title>
 
 </head>
 
@@ -67,7 +67,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">A.</a>
+                <a href="index.html" class="mil-logo">A.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -83,7 +83,7 @@
                                     <li class="mil-has-children mil-active">
                                         <a href="#.">Homepage</a>
                                         <ul>
-                                            <li><a href="home-1.html">Landing page</a></li>
+                                            <li><a href="index.html">Landing page</a></li>
                                             <li><a href="home-2.html">Personal</a></li>
                                             <li><a href="portfolio-3.html">Portfolio slider</a></li>
                                         </ul>
@@ -237,12 +237,12 @@
                                     </div>
                                 </div>
 
-                                <a href="services.html" class="mil-button mil-arrow-place mil-btn-space">
-                                    <span>What we do</span>
+                                <a href="portfolio-1.html" class="mil-button mil-arrow-place mil-btn-space">
+                                    <span>View works</span>
                                 </a>
 
-                                <a href="portfolio-1.html" class="mil-link mil-muted mil-arrow-place">
-                                    <span>View works</span>
+                                <a href="services.html" class="mil-link mil-muted mil-arrow-place">
+                                    <span>What we do</span>
                                 </a>
 
                                 <div class="mil-circle-text">
