--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                 <div class="row">
                                     <div class="col-md-7 col-lg-5">
 
-                                        <p class="mil-light-soft mil-mb-60">Welcome to our world of endless imagination and boundless creativity. Together, let's embark on a remarkable journey where dreams become tangible realities.</p>
+                                        <p class="mil-light-soft mil-mb-60">At EFFEX, we optimize your entire virtual personal brand to help you achieve the best results. Need video editing, thumbnail design, or channel management? We've got you covered, so you can keep doing what you do best—creating!</p>
 
                                     </div>
                                 </div>
