--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         <div class="container">
                             <div class="mil-banner-content mil-up">
 
-                                <h1 class="mil-muted mil-mb-60">Designing <span class="mil-thin">a Better</span><br> World <span class="mil-thin">Today</span></h1>
+                                <h1 class="mil-muted mil-mb-60">Editing <span class="mil-thin">Videos</span><br> That Connect <span class="mil-thin">And Convert</span></h1>
                                 <div class="row">
                                     <div class="col-md-7 col-lg-5">
 
