--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <!-- fancybox css -->
     <link rel="stylesheet" href="css/plugins/fancybox.min.css">
-    <!-- ashley scss -->
+    <!-- effex scss -->
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
     <title>EFFEX – Let's Create</title>
@@ -228,7 +228,7 @@
                         <div class="container">
                             <div class="mil-banner-content mil-up">
 
-                                <h1 class="mil-muted mil-mb-60">Editing <span class="mil-thin">Videos</span><br> That Connect <span class="mil-thin">And Convert</span></h1>
+                                <h1 class="mil-muted mil-mb-60">Editing <span class="mil-thin">Videos</span><br><span class="mil-thin">That </span>Connect <span class="mil-thin">And </span>Convert</h1>
                                 <div class="row">
                                     <div class="col-md-7 col-lg-5">
 
