--- a/index.html
+++ b/index.html
@@ -275,16 +275,16 @@
                             <div class="col-lg-6 col-xl-5">
 
                                 <div class="mil-mb-90">
-                                    <h2 class="mil-up mil-mb-60">Discover <br>Our <span class="mil-thin">Studio</span></h2>
-                                    <p class="mil-up mil-mb-30">At our design studio, we are a collective of talented individuals ignited by our unwavering passion for transforming ideas into reality. With a harmonious blend of diverse backgrounds and a vast array of skill sets, we join forces to create compelling solutions for our esteemed clients.</p>
+                                    <h2 class="mil-up mil-mb-60">Behind The Scene: <br>Where Magic <span class="mil-thin">Happens</span></h2>
+                                    <p class="mil-up mil-mb-30">At our agency, we’re a small but mighty team of four who love what we do. We’re passionate about turning your vision into something unforgettable. Whether it's editing, thumbnail design, or channel management, we create custom solutions that reflect your unique goals. We stay ahead of trends, so your content not only looks amazing but also resonates with your audience.</p>
 
-                                    <p class="mil-up mil-mb-60">Collaboration is at the heart of what we do. Our team thrives on the synergy that arises when unique perspectives converge, fostering an environment of boundless creativity. By harnessing our collective expertise, we produce extraordinary results that consistently surpass expectations.</p>
+                                    <p class="mil-up mil-mb-60">We’re not just about getting the job done — we’re here to support you, like your own creative squad. We make it easy for you to focus on what matters most, while we handle the behind-the-scenes magic. No stress, no hassle — just great work and a team that’s always here to help you succeed.</p>
 
                                     <div class="mil-about-quote">
                                         <div class="mil-avatar mil-up">
                                             <img src="img/faces/customers/2.jpg" alt="Founder">
                                         </div>
-                                        <h6 class="mil-quote mil-up">Passionately Creating <span class="mil-thin">Design Wonders:</span> Unleashing <span class="mil-thin">Boundless Creativity</span></h6>
+                                        <h6 class="mil-quote mil-up">We are here to bring creativity to every frame!<br> <span class="mil-thin">Founder, EFFEX</span></h6>
                                     </div>
                                 </div>
 
