--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
                                         </div>
                                         <div class="col-lg-4 mil-mb-60">
 
-                                            <h6 class="mil-muted mil-mb-30">Germany</h6>
+                                            <h6 class="mil-muted mil-mb-30">Bangladesh</h6>
 
-                                            <p class="mil-light-soft">Leehove 40, 2678 MC De Lier, Netherlands <span class="mil-no-wrap">+31 174 705 811</span></p>
+                                            <p class="mil-light-soft">Gopalganj, Dhaka - 8100 <span class="mil-no-wrap">+31 174 705 811</span></p>
 
                                         </div>
                                     </div>
@@ -194,7 +194,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">A.</a>
+                <a href="home-1.html" class="mil-logo">E.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -275,7 +275,7 @@
                             <div class="col-lg-6 col-xl-5">
 
                                 <div class="mil-mb-90">
-                                    <h2 class="mil-up mil-mb-60">Behind The Scene: <br>Where Magic <span class="mil-thin">Happens</span></h2>
+                                    <h2 class="mil-up mil-mb-60">Behind The Scene: <br> <span class="mil-thin">Where Magic Happens</span></h2>
                                     <p class="mil-up mil-mb-30">At our agency, we’re a small but mighty team of four who love what we do. We’re passionate about turning your vision into something unforgettable. Whether it's editing, thumbnail design, or channel management, we create custom solutions that reflect your unique goals. We stay ahead of trends, so your content not only looks amazing but also resonates with your audience.</p>
 
                                     <p class="mil-up mil-mb-60">We’re not just about getting the job done — we’re here to support you, like your own creative squad. We make it easy for you to focus on what matters most, while we handle the behind-the-scenes magic. No stress, no hassle — just great work and a team that’s always here to help you succeed.</p>
@@ -317,7 +317,7 @@
                                 <div class="row">
                                     <div class="col-lg-10">
 
-                                        <span class="mil-suptitle mil-light-soft mil-suptitle-right mil-up">Professionals focused on helping your brand<br> grow and move forward.</span>
+                                        <span class="mil-suptitle mil-light-soft mil-suptitle-right mil-up">We’re here to help you and your brand grow and shine.<br> With us on board, you can take a chill pill <br>– our results speak for themselves! </span>
 
                                     </div>
                                 </div>
@@ -325,12 +325,12 @@
                                 <div class="mil-complex-text justify-content-center mil-up mil-mb-15">
 
                                     <span class="mil-text-image"><img src="img/photo/office team.jpg" alt="team"></span>
-                                    <h2 class="mil-h1 mil-muted mil-center">Unique <span class="mil-thin">Ideas</span></h2>
+                                    <h2 class="mil-h1 mil-muted mil-center">Fresh <span class="mil-thin">Ideas To</span></h2>
 
                                 </div>
                                 <div class="mil-complex-text justify-content-center mil-up">
 
-                                    <h2 class="mil-h1 mil-muted mil-center">For Your <span class="mil-thin">Business.</span></h2>
+                                    <h2 class="mil-h1 mil-muted mil-center">Boost <span class="mil-thin">Your Brand.</span></h2>
                                     <a href="services.html" class="mil-services-button mil-button mil-arrow-place"><span>What we do</span></a>
 
                                 </div>
@@ -340,8 +340,8 @@
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
                                     <a href="service.html" class="mil-service-card-sm mil-up">
-                                        <h5 class="mil-muted mil-mb-30">Branding and <br>Identity Design</h5>
-                                        <p class="mil-light-soft mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
+                                        <h5 class="mil-muted mil-mb-30">Video Editing and <br>Motion Design</h5>
+                                        <p class="mil-light-soft mil-mb-30">Your go-to for stunning edits and motion graphics that keep viewers hooked!</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
 
@@ -349,8 +349,8 @@
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
                                     <a href="service.html" class="mil-service-card-sm mil-up">
-                                        <h5 class="mil-muted mil-mb-30">Website Design <br>and Development</h5>
-                                        <p class="mil-light-soft mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
+                                        <h5 class="mil-muted mil-mb-30">Thumbnail Design</h5>
+                                        <p class="mil-light-soft mil-mb-30">Need eye-catching thumbnails that are impossible to ignore? You’ve come to the right place!</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
 
@@ -358,8 +358,8 @@
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
                                     <a href="service.html" class="mil-service-card-sm mil-up">
-                                        <h5 class="mil-muted mil-mb-30">Advertising and <br>Marketing Campaigns</h5>
-                                        <p class="mil-light-soft mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
+                                        <h5 class="mil-muted mil-mb-30">Youtube Channel <br> Management & SEO</h5>
+                                        <p class="mil-light-soft mil-mb-30">Need help managing and growing your channel to focus on creating? Look no more!</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
 
@@ -367,8 +367,8 @@
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
                                     <a href="service.html" class="mil-service-card-sm mil-up">
-                                        <h5 class="mil-muted mil-mb-30">Creative Consulting <br>and Development</h5>
-                                        <p class="mil-light-soft mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
+                                        <h5 class="mil-muted mil-mb-30">Social Media And <br>Community Management</h5>
+                                        <p class="mil-light-soft mil-mb-30">Looking to build a strong online presence and engage with your community? We’ve got you!</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
 
@@ -387,9 +387,9 @@
 
                                 <div class="mil-mb-90">
                                     <h2 class="mil-up mil-mb-60">Meet <br>Our Team</h2>
-                                    <p class="mil-up mil-mb-30">We are talented individuals who are passionate about bringing ideas to life. With a diverse range of backgrounds and skill sets, we collaborate to produce effective solutions for our clients.</p>
+                                    <p class="mil-up mil-mb-30">Meet our team—actively working every day to achieve something better, pushing boundaries to bring your brand to the next level."</p>
 
-                                    <p class="mil-up mil-mb-60">Together, our creative team is committed to delivering impactful work that exceeds expectations.</p>
+                                    <p class="mil-up mil-mb-60">We’re here to help your brand grow from the ground up. Whether it's turning your ideas into stunning video edits, creating attention-grabbing thumbnails, or building your social media presence, we’ve got you covered. You can relax knowing your brand is in good hands.<br> <br> With our creative expertise and passion for growth, we work together to bring your vision to life. From building your online presence to engaging with your community, we’re committed to your success every step of the way.</p>
 
                                     <div class="mil-up"><a href="team.html" class="mil-button mil-arrow-place mil-mb-60"><span>Read more</span></a></div>
 
@@ -409,13 +409,9 @@
                                                 <img src="img/faces/1.jpg" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Anna Oldman</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Art Director</p>
+                                                        <h5 class="mil-muted mil-mb-5">Hasibul H Shanto</a></h5>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">Founder, Head Video Editor</p>
                                                         <ul class="mil-social-icons mil-center">
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -425,13 +421,9 @@
                                                 <img src="img/faces/3.jpg" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Oscar Freeman</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Frontend Dev</p>
+                                                        <h5 class="mil-muted mil-mb-5">Nabid A Din</a></h5>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">Junior Video Editor, Graphics Designer</p>
                                                         <ul class="mil-social-icons mil-center">
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -446,13 +438,9 @@
                                                 <img src="img/faces/2.jpg" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Emma Newman</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Founder</p>
+                                                        <h5 class="mil-muted mil-mb-5">Sayad Shamim</a></h5>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">Senior Video Editor, Graphics Designer</p>
                                                         <ul class="mil-social-icons mil-center">
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -462,13 +450,9 @@
                                                 <img src="img/faces/4.jpg" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Lisa Trueman</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">UI/UX Designer</p>
+                                                        <h5 class="mil-muted mil-mb-5">Sabbir A Mamun</a></h5>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">SEO & Social Media Expert, Channel & Community Manager</p>
                                                         <ul class="mil-social-icons mil-center">
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -723,16 +707,15 @@
 
                                         <div class="col-md-6 col-lg-5 mil-mb-60">
 
-                                            <h6 class="mil-muted mil-up mil-mb-30">Canada</h6>
-
-                                            <p class="mil-light-soft mil-up">71 South Los Carneros Road, California <span class="mil-no-wrap">+51 174 705 812</span></p>
+                                            <h6 class="mil-muted mil-up mil-mb-30"></h6>
 
                                         </div>
                                         <div class="col-md-6 col-lg-5 mil-mb-60">
 
-                                            <h6 class="mil-muted mil-up mil-mb-30">Germany</h6>
+                                            <h6 class="mil-muted mil-up mil-mb-30">Bangladesh</h6>
 
-                                            <p class="mil-light-soft mil-up">Leehove 40, 2678 MC De Lier, Netherlands <span class="mil-no-wrap">+31 174 705 811</span></p>
+                                            <p class="mil-light-soft mil-up">Gopalganj, Dhaka - 8100 </span></p>
+                                            <p class="mil-light-soft mil-up"> <span class="mil-no-wrap">+51 174 705 812</span></p>
 
                                         </div>
                                     </div>
