--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                     <h2 class="mil-up mil-mb-60">Meet <br>Our Team</h2>
                                     <p class="mil-up mil-mb-30">Meet our team—actively working every day to achieve something better, pushing boundaries to bring your brand to the next level."</p>
                                     <p class="mil-up mil-mb-60">We’re here to help your brand grow from the ground up. Whether it's turning your ideas into stunning video edits, creating attention-grabbing thumbnails, or building your social media presence, we’ve got you covered. You can relax knowing your brand is in good hands.<br> <br> With our creative expertise and passion for growth, we work together to bring your vision to life. From building your online presence to engaging with your community, we’re committed to your success every step of the way.</p>
-                                    <h4 class="mil-up"><span class="mil-thin">"We Are</span> Delivering <br><span class="mil-thin">Exceptional</span> Results."</h4>
+                                    <h4 class="mil-up"><span class="mil-thin">We Are</span> Delivering <br><span class="mil-thin">Exceptional</span> Results!</h4>
                                 </div>
 
                             </div>
