--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
                                                 <h5 class="mil-up mil-mb-10">Yassine Bounana</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Content Creator / Ad Agency Owner</p>
+                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Content Creator / Marketing Agency Owner</p>
                                                 <p class="mil-text-xl mil-up">This creative agency stands out with their exceptional talent and expertise. Their ability to think outside the box and bring unique ideas to life is truly impressive. With meticulous attention to detail, they consistently deliver visually stunning and impactful work.</p>
                                             </div>
                                         </div>
@@ -625,7 +625,7 @@
                                             <h6 class="mil-muted mil-up mil-mb-30">Bangladesh</h6>
 
                                             <p class="mil-light-soft mil-up">Gopalganj, Dhaka - 8100 </span></p>
-                                            <p class="mil-light-soft mil-up"> <span class="mil-no-wrap">+51 174 705 812</span></p>
+                                            <p class="mil-light-soft mil-up"> <span class="mil-no-wrap">+880 15375 70341</span></p>
 
                                         </div>
                                     </div>
@@ -642,7 +642,7 @@
                                                 <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
                                             </ul>
                                         </div>
-                                        <p class="mil-light-soft mil-up">© Copyright 2023 - Mil. All Rights Reserved.</p>
+                                        <p class="mil-light-soft mil-up">© Copyright 2025 - EFFEX All Rights Reserved.</p>
                                     </div>
 
                                 </div>
