--- a/pricing.html
+++ b/pricing.html
@@ -37,13 +37,14 @@
     }
 
     /* CONTAINER */
-    .container {
-      width: 90%;
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
+    .pricing-container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem 1rem;
+  text-align: center !important;
+}
+
 
     /* HERO SECTION */
     .hero-title {
@@ -301,7 +302,7 @@
 </head>
 <body>
 
-  <div class="container">
+  <div class="pricing-container">
     <!-- HERO SECTION -->
     <h1 class="hero-title">Simple, transparent pricing</h1>
     <p class="hero-subtitle">No contracts. No surprise fees.</p>
