--- a/index.html
+++ b/index.html
@@ -245,23 +245,6 @@
                                     <span>What we do</span>
                                 </a>
 
-                                <div class="mil-circle-text">
-                                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve" class="mil-ct-svg mil-rotate" data-value="360">
-                                        <defs>
-                                            <path id="circlePath" d="M 150, 150 m -60, 0 a 60,60 0 0,1 120,0 a 60,60 0 0,1 -120,0 " />
-                                        </defs>
-                                        <circle cx="150" cy="100" r="75" fill="none" />
-                                        <g>
-                                            <use xlink:href="#circlePath" fill="none" />
-                                            <text style="letter-spacing: 6.5px">
-                                                <!-- circle text -->
-                                                <textPath xlink:href="#circlePath">Scroll down - Scroll down - </textPath>
-                                            </text>
-                                        </g>
-                                    </svg>
-                                    <a href="#about" class="mil-button mil-arrow-place mil-icon-button mil-arrow-down"></a>
-                                </div>
-
                             </div>
                         </div>
                     </div>
@@ -282,7 +265,7 @@
 
                                     <div class="mil-about-quote">
                                         <div class="mil-avatar mil-up">
-                                            <img src="img/faces/customers/Square Image For Upwork.jpg" alt="Founder">
+                                            <img src="img/faces/customers/Square Image.jpg" alt="Founder">
                                         </div>
                                         <h6 class="mil-quote mil-up">We are here to bring creativity to every frame!<br> <span class="mil-thin">Founder, EFFEX</span></h6>
                                     </div>
